overflow problem fixed

--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -70,9 +70,15 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: 50vh;
+    margin-top: 1em;
+    margin: 2em;
+    overflow-y: auto;
     @media (max-width: $tablet) {
       margin-top: 0em;
       margin-bottom: 0em;
+      height: 100%;
+      overflow-y: visible;
     }
   }
 }
@@ -92,13 +98,14 @@
 }
 
 .no-lists {
-    margin-top: 3em;
+    margin-top: 1em;
     font-style: italic;
 }
 
 .view-lists {
   width: 68%;
-  margin: 1.5em auto;
+  margin-right: auto;
+  margin-left: auto;
   & .item {
     background-color: $background-light;
     list-style: none;
